# Therapeutics_Simulation_Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-api.txt  requirements-cli.txt  requirements.txt
docker/: Dockerfile
notebooks/: TSA_Demo.ipynb
outputs/: pipeline_report.md  proposals.csv
scripts/: smoke_test.py  tsa_cli.py
src/tsa/: cli.py  config.py  service.py
src/tsa/agent/: simulator.py
src/tsa/agents/: critic_agent.py  data_agent.py  hypothesis_agent.py  orchestrator.py  simulation_agent.py  validation_agent.py
src/tsa/api/: app.py
src/tsa/data/: dataloaders.py  synthetic.py
src/tsa/eval/: validation.py
src/tsa/models/latent/: vae.py
src/tsa/utils/: logging.py
tests/: test_api.py  test_loop.py
