[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "therapeutic-simulation-agent"
version = "0.2.0"
description = "Therapeutic Simulation Agent: propose, simulate, and validate therapeutic hypotheses."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "Proprietary"}
authors = [{ name = "TSA Authors" }]
dependencies = [
  "pydantic==2.8.2",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "torch==2.3.1",
  "scikit-learn==1.5.1",
  "requests==2.32.3",
]

[project.urls]
Homepage = "https://example.com/therapeutic-simulation-agent"

[project.scripts]
tsa = "tsa.cli:main"

[project.optional-dependencies]
api = [
  "fastapi==0.112.2",
  "uvicorn==0.30.6",
]
dev = [
  "pytest==8.3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tsa*"]
